メッセージページ作成お知らせボタンの修正まだ

--- a/css/student.css
+++ b/css/student.css
@@ -357,7 +357,12 @@ justify-content: flex-end;
 	margin-right: 6rem;
 }
 
-#main .message{
+/* レイアウトが変わったため、非表示 他の画面に影響がなければ削除する
+承認、保留、辞退、メッセージボタンに影響が出る
+.comLinkBox02 .btnList li .message　ここに影響が出る
+
+*/
+/* #main .message{
 	box-sizing: border-box;
 	padding: 7rem 4.5rem 7rem;
 	width: calc(49.5% - 2.4rem);
@@ -366,7 +371,7 @@ justify-content: flex-end;
 	background: #fff;
 	box-shadow: 0 0 1.5rem rgba(0, 0, 0, 0.04);
     text-align: center;
-}
+} */
 #main .results {
 	box-sizing: border-box;
 	padding: 4.1rem 4.5rem 7.2rem;
@@ -1005,10 +1010,15 @@ justify-content: flex-end;
 		border-radius: 1rem;
 		flex: 1;
 	}
+	#main .comLinkBox02 .btnList li .message {
+		padding: 0.6rem 1.6rem 0.6rem 2rem;
+		align-items: center;
+		justify-content: center;
+	}
 	#main .message.profile {
 		padding: 2.2rem 2.5rem 3.2rem;
 		width: auto;
-		border-radius: 1rem;
+		border-radius: .8rem;
 		flex: 1;
 	}
 	#main .message.profile  .headLine01 {
