--- a/css/common/general.css
+++ b/css/common/general.css
@@ -321,6 +321,7 @@
 	.pageTitle .subTtl {
 		font-size: 1rem;
 		height: 2rem;
+		letter-spacing: .1rem;
 	}
 	.pageTitle .subTtl p {
 		margin-right: 0;
@@ -2064,14 +2065,22 @@
 .comListBox02 .listHead .item01 {
 	width: 18.4%;
 }
+.comListBox02 .listHead .item01.message-page {
+	width: 15.4%;
+}
 .comListBox02 .listHead .item02 {
 	width: 20.3%;
+}
+.comListBox02 .listHead .item02.message-page {
+	width: 18%;
+	padding-left: 0.5rem;
+    padding-right: 1rem;
 }
 .comListBox02 .listHead .item03 {
 	width: 37.5%;
 }
 .comListBox02 .listHead .item03.message-page {
-	width: 50%;
+	width: 48%;
 }
 .comListBox02 .listHead .item04 {
 	padding-right: 0;
@@ -2099,19 +2108,17 @@
 .comListBox02 .listBody li:last-child::after {
 	display: none;
 }
-.comListBox02 .listBody li p {
-	display: flex;
-	align-items: center;
-	align-content: center;
-	box-sizing: border-box;
-}
+
 .comListBox02 .listBody li .time{
-	padding-left: 3%;
-	padding-right: 1rem;
-	width: 18.4%;
+	width: 15.4%;
 	color: #A3A3A3;
 	font-weight: 500;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	box-sizing: border-box;
 }
+
 .comListBox02 .favorite-content .time {
 	padding-left: 3%;
 	padding-right: 1rem;
@@ -2133,7 +2140,7 @@
 	column-gap: 1.3rem;
 }
 .comListBox02 .listBody li .category .pho {
-	width: 16rem;
+	width: 12rem;
 	position: relative;
 }
 
@@ -2165,7 +2172,7 @@
 	width: 3.8rem;
 	position: absolute;
 	bottom: -5%;
-	right: -10%;
+	right: -24%;
 	z-index: 2;
 	font-size: 1.2rem;
 }
@@ -2301,6 +2308,7 @@ display: none;
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	width: 11%;
 	
 }
 .comListBox02 .listBody li .notice-badge.read {
@@ -2447,15 +2455,25 @@ align-items: center;
 		width: 18%;
 		display: none;
 	}
+
 	.comListBox02 .listHead .item02 {
 		padding-left: 4%;
 		flex: 2;
+	}
+	.comListBox02 .listHead .item02.message-page {
+		width: 50%;
+		flex: auto;
+	}
+
+	.comListBox02 .listHead .item03.message-page {
+		width: 30%;
 	}
 	.comListBox02 .listHead .item03 {
 		width: 36.5%;
 	}
 	.comListBox02 .listHead .item03.message-page {
-		width: 60%;
+		width: 66%;
+		margin-right: 4%;
 	}
 	.comListBox02 .listHead .item04 {
 		padding-right: 3%;
@@ -2466,6 +2484,7 @@ align-items: center;
 	.comListBox02 .listBody li {
 		padding: 1.4rem 0 1.5rem;
 		font-size: 0.8rem;
+		justify-content: center;
 	}
 	.comListBox02 .listBody li .ttl a {
 		display: flex;
@@ -2502,9 +2521,18 @@ align-items: center;
 
 
 	.comListBox02 .listBody li .category {
-		padding-left: 4%;
+		padding-left: 0%;
+		padding-right: 2%;
 		width: 40%;
-		flex: 2;
+		font-size: 0.8rem;
+		column-gap: 2rem;
+
+
+	}
+
+	.comListBox02 .listBody li .category.message-page {
+		padding-left: 0%;
+		width: 40%;
 		font-size: 0.8rem;
 		column-gap: 2rem;
 
@@ -2651,12 +2679,12 @@ align-items: center;
 		margin-top: 0.1rem;
 	}
 	.comListBox02 .listBody li .category .pho {
-		width: 8rem;
+		width: 6rem;
 		position: relative;;
 		flex: 1;
 	}
 	.comListBox02 .listBody li .category .pho a {
-		width: 8rem;
+		width: 6rem;
 	}
 	.comListBox02 .listBody li .category .textBox {
 		width: calc(100% - 5rem);
@@ -2665,23 +2693,25 @@ align-items: center;
 		opacity: 0;
 	} 
 	.comListBox02 .listBody li .ttl.message-page{
-		width: 40%;
+		width: 45%;
 	}
 	.comListBox02 .listBody li .ttl.message-page .txt {
-		width: 25.5rem;
+		width: 29rem;
 	}
 	.comListBox02 .listBody li .notice-badge {
-		width: 13%;
+		width: 7%;
+		justify-content: flex-end;
+		align-items: center;
 	}
 	.comListBox02 .listBody li .notice-badge span {
 		background-color: #FE1211;
 		border-radius: 50%;
-		width: 2.7rem;
-		height: 2.7rem;
-		line-height: 2.7rem;
+		width: 2rem;
+		height: 2rem;
+		line-height: 2rem;
 		color: #FFF;
 		text-align: center;
-		font-size: 1.2rem;
+		font-size: 1rem;
 	}
 }
 @media all and (max-width: 599px) {
@@ -2735,7 +2765,7 @@ align-items: center;
 		content: "";
 	}
 	.comListBox02 .listBody li .category {
-		padding: 0.3rem 1rem 0 0rem;
+		padding: 0.3rem 0 0 0;
 		width: 100%;
 		font-size: 1rem;
 		display: flex;
@@ -2782,6 +2812,12 @@ align-items: center;
 		font-size: 1.2rem;
 		line-height: 1.3;
 	}
+	.comListBox02 .listBody li .category .textBox p:first-of-type {
+		font-size: 1.4rem;
+	}
+	.comListBox02 .listBody li .category .textBox p .phone-text {
+		color: #A3A3A3;
+	}
 	.comListBox02 .listBody li .category .textBox .sml  {
 		font-size: 1rem;
 	} 
@@ -2801,6 +2837,7 @@ align-items: center;
 	.comListBox02 .listBody li .category .textBox .sml {
 		margin-top: 0;
 		font-size: 1rem;
+		display: none;
 	}
 	.comListBox02 .listBody li .ttl {
 		display: none;
@@ -2821,6 +2858,7 @@ align-items: center;
 	.comListBox02 .listBody li .category .textBox.message-page {
 		width: 61%;
 	}
+
 
 	.comListBox02 .listBody li .ttl .txt {
 		max-width: 100%;
@@ -2940,7 +2978,7 @@ align-items: center;
 		display: block;
 	  }
 	  .comListBox02 .listBody li .ttl.message-page .txt {
-		width: 20rem;
+		width: 17rem;
 	}
 
 	  	/* お気に入りされた企業一覧  タブレット*/
@@ -2978,6 +3016,9 @@ align-items: center;
 
 	.comListBox02 .listBody li .notice-badge.pc-tab {
 		display: none;
+	}
+	.comListBox02 .listBody li .notice-badge {
+		width: 5rem;
 	}
 }
 /*------------------------------------------------------------
@@ -3683,7 +3724,7 @@ font-weight: 400;
 	comLinkList01
 ------------------------------------------------------------*/
 .comLinkList01 li {
-	margin-bottom: 1.1rem;
+	margin-bottom: 0;
 }
 .comLinkList01 li:last-child {
 	margin-bottom: 0;
@@ -3700,7 +3741,7 @@ font-weight: 400;
 li .uploadResult a {
 	margin-left: 2rem;
 	padding-left: 3rem;
-	margin-bottom: 2rem;
+	margin-bottom: 1.3rem;
 	display: inline-block;
 	font-size: 1.4rem;
 	background: url("/image/common/icon-fileDownload.svg")no-repeat top 0.3rem left 0.3rem;
@@ -3716,13 +3757,14 @@ li .uploadResult a {
 }
 @media all and (min-width: 600px) and (max-width: 1024px) {
 	.comLinkList01 li {
-		margin-bottom: .6rem;
+		margin-bottom: 0;
 	}
 	.comLinkList01 li:last-child {
 		margin-bottom: 0;
 	}
 	.comLinkList01 li a {
 		padding-left: 1.9rem;
+		margin-bottom: 0;
 		font-size: 1rem;
 		background-size: 0.9rem auto;
 		background-position: top 0.3rem left 0.1rem;
@@ -3730,7 +3772,7 @@ li .uploadResult a {
 }
 @media all and (max-width: 599px) {
 	.comLinkList01 li {
-		margin-bottom: 0.4rem;
+		margin-bottom: 0;
 	}
 	.comLinkList01 li:last-child {
 		margin-bottom: 0;
@@ -4140,14 +4182,14 @@ li .uploadResult a {
 	width: 70.45%;
 }
 .comMessageBox .detailBox .subBox {
-	padding: 4.9rem 5.3rem;
+	padding: 2rem 2.3rem;
 	border-radius: 2.7rem;
 	position: relative;
 	background:#FFF;
-	border: 0.15rem solid #E5E5E5;
+	border: 0.1rem solid #A3A3A3;
 }
 .comMessageBox .companymessage .itemBox .detailBox .subBox {
-	padding: 4.9rem 5.3rem;
+	padding: 2rem 2.3rem;
 	border-radius: 2.7rem;
 	position: relative;
 	background:#E9F3F9;
@@ -4164,7 +4206,7 @@ li .uploadResult a {
 }
 .comMessageBox .detailBox .subBox p {
 	margin-bottom: 2.3rem;
-	line-height: 2.0625;
+	line-height: 1.5;
 }
 .comMessageBox .detailBox .subBox p:last-child {
 	margin-bottom: 0;
@@ -4215,11 +4257,11 @@ li .uploadResult a {
 	font-size: 1.4rem;
 }
 .comMessageBox .detailBox .subBox::before {
-	width: 2.1rem;
-	height: 2.4rem;
+	width: 2rem;
+	height: 2rem;
 	position: absolute;
 	left: auto;
-	right: -1.25rem;
+	right: -1.35rem;
 	top: 2rem;
 	background: url("/image/common/message-bubbleBg-white.png") no-repeat left center / auto 100%;
 	content: "";
@@ -4303,10 +4345,10 @@ li .uploadResult a {
 	}
 	.comMessageBox .companymessage .itemBox .detailBox .subBox {
 		border-radius: 2rem;
-		padding: 1.8rem 2.1rem 2.1rem 2.6rem;
+		padding: 1rem 1rem 1rem 1.4rem;
 	}
 	.comMessageBox .detailBox .subBox {
-		padding: 1.8rem 2.1rem 2.1rem 2.6rem;
+		padding: 1rem 1rem 1rem 1.4rem;
 		border-radius: 2rem;
 	}
 	.comMessageBox .detailBox .subBox::before {
@@ -4316,8 +4358,8 @@ li .uploadResult a {
 		top: 2.8rem;
 	}
 	.comMessageBox .detailBox .subBox p {
-		margin-bottom: 1.5rem;
-		line-height: 2.4;
+		margin-bottom: 1rem;
+		line-height: 1.5;
 	}
 	.comMessageBox .detailBox .subBox p:last-child {
 		margin-bottom: 0;
@@ -4350,10 +4392,6 @@ li .uploadResult a {
 		padding-left: 0;
 	}
 
-	.comMessageBox .itemBox:nth-child(2n) .detailBox .subBox {
-		padding: 2rem 2.2rem 3.6rem 2.5rem;
-	}
-
 	.comMessageBox .itemBox:nth-child(2n) .detailBox .btmBox {
 		margin-left: 1.5rem;
 	}
@@ -4371,21 +4409,21 @@ li .uploadResult a {
 		justify-content: flex-start;
 	}
 	.comMessageBox .companymessage .itemBox .detailBox .subBox::before {
-		width: 2.1rem;
-		height: 2.3rem;
+		width: 1.3rem;
+		height: 1.6rem;
 		position: absolute;
-		left: -2rem;
+		left: -1.3rem;
 		top: 2.8rem;
 		background: url("/image/common/message-bubbleBg-blue.png") no-repeat right center / auto 100%;
 		content: "";
 	}
 	.comMessageBox .detailBox .subBox::before {
-		width: 2.1rem;
-		height: 2.4rem;
+		width: 1.5rem;
+		height: 1.5rem;
 		position: absolute;
 		left: auto;
-		right: -1.25rem;
-		top: 2rem;
+		right: -.95rem;
+		top: 1.7rem;
 		background: url("/image/common/message-bubbleBg-white.png") no-repeat left center / auto 100%;
 		content: "";
 	}
@@ -4433,15 +4471,16 @@ li .uploadResult a {
 		width: auto;
 	}
 	.comMessageBox .detailBox .subBox {
-		padding: 1.3rem 1rem 1.4rem 1.5rem;
+		padding: 1rem 1rem 1.2rem 1.2rem;
 		border-radius: 1.5rem;
 	}
 	.comMessageBox .detailBox .subBox::before {
 		display: none;
 	}
 	.comMessageBox .detailBox .subBox p {
-		margin-bottom: 1.5rem;
-		line-height: 2;
+		margin-bottom: 1.1rem;
+		margin-right: 0;
+		line-height: 1.5;
 	}
 	.comMessageBox .detailBox .subBox p:last-child {
 		margin-bottom: 0;
@@ -4459,6 +4498,9 @@ li .uploadResult a {
 	.comMessageBox .detailBox .btmBox .read,
 	.comMessageBox .detailBox .btmBox .messageEdit  {
 		font-size: 1rem;
+	}
+	.comMessageBox .detailBox .btmBox .time {
+		margin-right: 0;
 	}
 	.comMessageBox .detailBox .btmBox .read {
 		margin-right: 0;
@@ -4482,9 +4524,6 @@ li .uploadResult a {
 	.comMessageBox .itemBox:nth-child(2n) .nameBox .textBox {
 		padding-left: 1.4rem;
 	}
-	.comMessageBox .itemBox:nth-child(2n) .detailBox .subBox {
-		padding: 1.1rem 1.6rem;
-	}
 	.comMessageBox .itemBox:nth-child(2n) .detailBox .subBox::before {
 		display: none;
 	}
@@ -4495,10 +4534,12 @@ li .uploadResult a {
 		margin-left: 0;
 	}
 	.comMessageBox .detailBox .btmBox .messageEdit {
+		margin: 0;
 		margin-left: 0;
+		padding: 0;
 	}
 	.comMessageBox .companymessage .itemBox .detailBox .subBox {
-	padding: 1.2rem 1rem 1.3rem 1.5rem;
+	padding: 1rem 1rem 1.2rem 1.2rem;
     border-radius: 1.5rem;
 	}
 }
@@ -4535,10 +4576,6 @@ cursor: pointer;
 	display: none;
 }
 
-.modal-editor,
-.modal-profile {
-	display: none;
-}
 .modal-editor.is-active,
 .modal-profile.is-active {
 	display: block;
@@ -4568,7 +4605,7 @@ cursor: pointer;
 }
 .editor-container textarea {
     box-sizing: border-box;
-    margin-bottom: 2.1rem;
+    margin-bottom: .7rem;
     padding: 2rem 2.2rem;
     width: 100%;
     height: 18.2rem;
@@ -4588,7 +4625,7 @@ cursor: pointer;
     margin-bottom: 4.7rem;
 }
 .editor-container textarea + .comLinkList01 {
-    margin-top: 1.2rem;
+    margin-top: 0;
 }
 .editor-container .fileUpload {
 	display: flex;
@@ -4655,8 +4692,15 @@ margin-top: -2.3rem;
     background: none;
 	text-align: left;
 }
-
+@media all and (max-width: 1024px) {
+	.editor-container textarea {
+		margin-bottom: .5rem;
+	}
+}
 @media all and (max-width: 599px) {
+	.editor-container textarea {
+		margin-bottom: .5rem;
+	}
 	.modal-editor .editor-container {
 		width: 100%;
 		height: 100vh;
@@ -4674,7 +4718,7 @@ margin-top: -2.3rem;
 	}
 
 	.modal-editor .editor-container .fileUpload {
-		padding-top: 0.9rem;
+		padding-top: 0;
 		display: block;
 	}
 }
@@ -4701,7 +4745,7 @@ margin-top: -2.3rem;
 }
 .popBox {
 	margin: 0 auto;
-	padding: 5.8rem 6.8rem 6.9rem;
+	padding: 5.8rem 6.8rem 5.8rem;
 	width: 100%;
 	max-width: 100.4rem;
 	border-radius: 1.4rem;
@@ -4746,7 +4790,7 @@ margin-top: -2.3rem;
 	width: calc(80% - 1.5rem);
 }
 .popBox .imgBox .textBox p {
-	margin-bottom: 3.3rem;
+	margin-bottom: 0;
 	font-size: 1.7rem;
 	color: #A3A3A3;
 	line-height: 1.94;
@@ -4756,7 +4800,7 @@ margin-top: -2.3rem;
 	width: 80%;
 }
 .modal-profile .popBox .imgBox {
-	align-items: flex-start;
+	align-items: center;
 }
 .modal-profile .popBox .imgBox  .photoBox {
 	width: calc(40% - 1.5rem);
@@ -4804,7 +4848,7 @@ margin-top: -2.3rem;
 		border-radius: 1rem;
 	}
 	.popBox .imgBox .textBox p {
-		margin-bottom: 1.5rem;
+		margin-bottom: 0;
 		font-size: 1.2rem;
 	}
 	.popBox .imgBox .textBox p:last-child {
@@ -4821,7 +4865,7 @@ margin-top: -2.3rem;
 	}
 	.popBox {
 		margin: 0;
-		padding: 3rem 2rem;
+		padding: 2rem 2rem;
 		max-width: inherit;
 		border-radius: 1rem;
 	}
@@ -5111,7 +5155,7 @@ margin-top: -2.3rem;
 }
 .comMessageEditBox textarea {
 	box-sizing: border-box;
-	margin-bottom: 2.1rem;
+	margin-bottom: .7rem;
 	padding: 2rem 2.2rem;
 	width: 100%;
 	height: 18.2rem;
@@ -5138,7 +5182,7 @@ margin-top: -2.3rem;
 	background: #F8F8F8;
 }
 .comMessageEditBox textarea + .comLinkList01 {
-	margin-top: 1.2rem;
+	margin-top: 0;
 }
 .comMessageEditBox .comLinkList01 {
 	margin-bottom: 4.7rem;
@@ -5155,6 +5199,7 @@ margin-top: -2.3rem;
 	font-size: 1.2rem;
 	color: #A3A3A3;
 	background: none;
+	font-weight: 500;
 }
 .comMessageEditBox .comLinkList01 li .uploadResult {
 	display: block;
@@ -5280,7 +5325,7 @@ margin-top: -2.3rem;
 		border-radius: 1rem;
 	}
 	.comMessageEditBox textarea {
-		margin-bottom: 1.5rem;
+		margin-bottom: 1rem;
 		padding: 1.8rem 1.9rem;
 		height: 13.2rem;
 		font-size: 0.9rem;
@@ -5311,7 +5356,7 @@ margin-top: -2.3rem;
 	}
 	.comMessageEditBox .comLinkList01 li a {
 		padding-left: 1.7rem;
-		margin-bottom: 1rem;
+		margin-bottom: 0rem;
 	}
 	.comMessageEditBox .comLinkList01 li .del {
 		margin-left: 0.8rem;
@@ -5327,6 +5372,7 @@ margin-top: -2.3rem;
 		width: 12rem;
 		text-align: center;
 		font-size: 1rem;
+		border-radius: .5rem;
 	}
 	.comMessageEditBox .fileUpload .note {
 		margin-top: -0.2rem;
@@ -5342,10 +5388,10 @@ margin-top: -2.3rem;
 	}
 	.comMessageEditBox .submit li {
 		margin: 1rem 0.3rem 0;
-		width: 15rem;
+		width: 25rem;
 	}
 	.comMessageEditBox .submit li input {
-		height: 3rem;
+		height: 4rem;
 		border-radius: 0.5rem;
 		font-size: 1rem;
 	}
@@ -5361,10 +5407,10 @@ margin-top: -2.3rem;
 	/* メッセージ編集用レイアウト */
 	.modal-editor .editor-container .submit li {
 		margin: 1rem 0.3rem 0;
-		width: 15rem;
+		width: 23rem;
 	}
 	.modal-editor .editor-container .submit li input{
-		height: 3rem;
+		height: 4rem;
 		border-radius: 0.5rem;
     	font-size: 1rem;
 	}
@@ -5374,6 +5420,7 @@ margin-top: -2.3rem;
 		width: 12rem;
 		text-align: center;
 		font-size: 1rem;
+		border-radius: .5rem;
 	}
 	.modal-editor .editor-container .note {
 		margin-top: -0.2rem;
@@ -5392,6 +5439,7 @@ margin-top: -2.3rem;
 		margin-left: 0.8rem;
 		padding-left: 0;
 		font-size: 1rem;
+		font-weight: 500;
 	}
 }
 @media all and (max-width: 599px) {
@@ -5424,7 +5472,7 @@ margin-top: -2.3rem;
 		font-size: 1.2rem;
 	}
 	.comMessageEditBox textarea {
-		margin-bottom: 1rem;
+		margin-bottom: .5rem;
 		padding: 1.5rem 1.9rem;
 		height: 13.2rem;
 		font-size: 0.9rem;
@@ -5443,7 +5491,7 @@ margin-top: -2.3rem;
 		margin-top: 0;
 	}
 	.comMessageEditBox .comLinkList01 li {
-		margin-bottom: 0.9rem;
+		margin-bottom: 0rem;
 	}
 	.comMessageEditBox .comLinkList01 li:last-child {
 		margin-bottom: 0;
@@ -5460,7 +5508,7 @@ margin-top: -2.3rem;
 		color: #A3A3A3;
 	}
 	.comMessageEditBox .fileUpload {
-		padding-top: 0.9rem;
+		padding-top: 0rem;
 		display: block;
 	}
 	.comMessageEditBox .fileUpload label input[type="file"] ~ span {
@@ -5468,6 +5516,7 @@ margin-top: -2.3rem;
 		margin-left: .2rem;
 		width: 12rem;
 		font-size: 1rem;
+		border-radius: .6rem;
 	}
 	.comMessageEditBox .note {
 		margin-bottom: 1.5em;
@@ -5509,6 +5558,7 @@ margin-top: -2.3rem;
 		margin-left: .2rem;
 		width: 12rem;
 		font-size: 1rem;
+		border-radius: .6rem;
 	}
 	.modal-editor .editor-container .note {
 		margin: 0;
@@ -5531,6 +5581,7 @@ margin-top: -2.3rem;
 		margin-left: 1.5rem;
 		font-size: 1rem;
 		color: #A3A3A3;
+		font-size: 500;
 	}
 }
 /*------------------------------------------------------------
@@ -6601,7 +6652,7 @@ display: none;
 	margin-bottom: 3rem;
 }
 .select-outer {
-	max-width: 23%;
+	max-width: 20%;
 	overflow: hidden;
 	position: relative;
 	text-align: center;
@@ -6614,6 +6665,7 @@ display: none;
 	border-radius: 5rem;
 	padding: 0 3rem ;
 	font-size: 1.5rem;
+	font-weight: 700;
 	border: none;
 	cursor: pointer;
 	outline: none;
@@ -6639,7 +6691,7 @@ display: none;
 
 @media all and (min-width: 600px) and (max-width: 1024px) {
 	.select-outer {
-		max-width: 40%;
+		max-width: 38%;
 		overflow: hidden;
 		position: relative;
 		text-align: center;
@@ -6700,6 +6752,7 @@ display: none;
 	border-radius: 5rem;
 	padding: 0 2.5rem ;
 	font-size: 1.1rem;
+	font-weight: 700;
 	border: none;
 	cursor: pointer;
 	outline: none;
