--- a/css/common/layout.css
+++ b/css/common/layout.css
@@ -13,6 +13,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 	outline: 0;
 	font-size: 1em;
 }
+
 html {
 	font-size: 62.5%;
 }
@@ -23,6 +24,10 @@ html {
 	-webkit-tap-highlight-color:rgba(0,0,0,0);
 	cursor:pointer;
   }
+
+  .br-sp {
+	display: none;
+  }
 @media all and (min-width: 1025px) and (max-width: 1919px) {
 	html {
 		font-size: 0.521vw;
@@ -30,6 +35,9 @@ html {
 	.tab-new-line {
 		display: none
 	}
+	.br-sp {
+		display: none;
+	  }
 	
 }
 @media all and (min-width: 600px) and (max-width: 1024px) {
@@ -39,7 +47,15 @@ html {
 	.tab-new-line {
 		display: block;
 	}
+	.br-sp {
+		display: none;
+	  }
 	
+}
+@media all and (max-width: 599px) {
+.br-sp {
+	display: block;
+  }
 }
 @media all and (max-width: 390px) {
 	html {
@@ -205,7 +221,7 @@ a[href^="tel:"] {
 	align-items: center;
 	box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.04);
 	background: #fff;
-	z-index: 100;
+	z-index: 1000;
 }
 #gHeader .hBox {
 	display: flex;
@@ -287,9 +303,11 @@ a[href^="tel:"] {
 	right: 0;
 }
 
+/* 1229 一旦削除 */
   
   /* モーダルと背景の指定 */
-  #gHeader .modal-outer,
+
+  /* #gHeader .modal-outer,
   #gHeader .modal-outer-sp,
   .notice-modal {
 	position: fixed;
@@ -297,19 +315,26 @@ a[href^="tel:"] {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	text-align: center;
+	text-align: center; */
+
 	/* background: rgba(0,0,0,50%); */
-	padding: 40px 20px;
+	
+	/* padding: 40px 20px;
 	overflow: auto;
 	opacity: 0;
 	visibility: hidden;
 	transition: .3s;
 	box-sizing: border-box;
-	z-index: 1000;
-  }
+	z-index: 1000; */
+	
+	/*  */
+
+	/* display: none;
+  } */
   
+  /* 1229　一旦削除 */
   /* モーダルの擬似要素の指定 */
-  #gHeader .notice-modal:before,
+  /* #gHeader .notice-modal:before,
   #gHeader .notice-modal-sp:before{
 	content: "";
 	display: inline-block;
@@ -317,7 +342,7 @@ a[href^="tel:"] {
 	height: 100%;
 	margin-left: -0.2em;
   }
-  
+   */
   /* クラスが追加された時の指定 */
   #gHeader .notice-modal.is-active,
   #gHeader .notice-modal-sp.is-active{
@@ -335,11 +360,12 @@ a[href^="tel:"] {
 	height: auto;
 	width: 90%;
 	overflow: hidden;
-	display: none;
-	z-index: 1100;
+	/* 1229 一旦削除 */
+	/* display: none; */
+	/* z-index: 1100; */
   }
   #gHeader .modal-container.notice.is-active{
-	display: block;
+	/* display: block; */
   }
 
   /* モーダルを閉じるボタンの指定 　 */
@@ -476,7 +502,10 @@ background: #DFEAF1;
 	font-size: 1.2rem;
 	color: #8F8F8F;
 }
-/* #gHeader .hUserBox-list {
+
+/* 1229 一旦削除 */
+/* 試すために再表示 */
+/* #gHeader .modalBox {
 		position: fixed;
 	top: 0;
 	left: 0;
@@ -491,15 +520,20 @@ background: #DFEAF1;
 	box-sizing: border-box;
 	z-index: 1000;
 } */
-#gHeader .hUserBoxOuter {
+
+
+/* 1229 一旦削除 */
+/* #gHeader .hUserBoxOuter {
 	position: fixed;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
-	text-align: center;
+	text-align: center; */
+
 	/* background: rgba(0,0,0,50%); */
-	padding: 40px 20px;
+
+	/* padding: 40px 20px;
 	overflow: auto;
 	opacity: 0;
 	visibility: hidden;
@@ -507,60 +541,82 @@ background: #DFEAF1;
 	box-sizing: border-box;
 	z-index: 1000;
 
+} */
+
+/* モーダルの修正のため追記1229 */
+#gHeader .modalBox {
+position: fixed;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+display: none;
+cursor: pointer;
+background: transparent;
 }
+
+#gHeader .modalBox.active {
+	display: block;
+	}
+
 #gHeader .hUserBoxOuter.is-active  {
 	opacity: 1;
 	visibility: visible;
 }
-#gHeader .hUserBox-list .subList {
+/* 1229 モーダルのため修正追加 */
+#gHeader .modalBox .subList {
 	position: absolute;
-    top: 80%;
+    top: 10%;
     right: 3%;
 	width: 33rem;
 	box-sizing: border-box;
 	border: 0.1rem solid #E5E5E5;
 	background: #fff;
 	border-radius: 1.3rem;
-	display: none;
+
+	/* 1229一旦削除 */
+	/* display: none; */
+
 	z-index: 1100;
 
 }
-#gHeader .hUserBox-list .subList .User-detail{
+/* 1229一旦削除 */
+/* #gHeader .modalBox .subList .User-detail{
 	display: none;
 
 }
-#gHeader .hUserBox-list .subList.is-active {
+#gHeader .modalBox .subList.is-active {
 	display: block;
-}
-#gHeader .hUserBox-list .subList li:not(:last-child) {
+} */
+#gHeader .modalBox .subList li:not(:last-child) {
 	border-bottom: 0.1rem solid #E5E5E5;
 }
-#gHeader .hUserBox-list .subList .User-detail li a {
+#gHeader .modalBox .subList .User-detail li a {
 	height: 12rem;
 }
 
-#gHeader .hUserBox-list .subList li a {
+#gHeader .modalBox .subList li a {
 	padding: 1.9rem 3rem;
 	display: flex;
 	align-items: center;
 	font-size: 1.4rem;
 }
-#gHeader .hUserBox-list .subList li a .icon {
+#gHeader .modalBox .subList li a .icon {
 	margin-right: 0.9rem;
 	width: 1.7rem;
 	line-height: 2rem;
 }
-#gHeader .hUserBox-list .subList li.item01 a .icon {
+#gHeader .modalBox .subList li.item01 a .icon {
 	margin-right: 0.8rem;
 	width: 1.8rem;
 }
-#gHeader .hUserBox-list .subList li a .icon .hover {
+#gHeader .modalBox .subList li a .icon .hover {
 	display: none;
 }
-#gHeader .hUserBox-list .subList li .responsive-arrow {
+#gHeader .modalBox .subList li .responsive-arrow {
 	display: none;
 }
-#gHeader .hUserBox-list .subList .hamburger-list a {
+#gHeader .modalBox .subList .hamburger-list a {
 height: 3.5rem;
 }
 #gHeader .hUserBox .userName {
@@ -593,6 +649,7 @@ height: 3.5rem;
 		display: flex;
 		justify-content: space-between;
 		box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.04);
+		z-index: 1000;
 	}
 	#gHeader::before {
 		content: '';
@@ -795,7 +852,8 @@ height: 3.5rem;
 		top: 2.4rem;
 	}
 	.menuBox .linkList li .subList {
-		display: none;
+		/* 1229一旦削除 */
+		/* display: none; */
 		padding-bottom: 1.6rem;
 	}
 	.menuBox .linkList li .subList li {
@@ -810,13 +868,30 @@ height: 3.5rem;
 		font-size: 1rem;
 		color: #A3A3A3;
 	}
-	#gHeader .hUserBox-list .subList .User-detail{
+	#gHeader .modalBox .subList .User-detail{
 		display: block;
 	
 	}
 	#gHeader .modal-content .moreLink .moreLink-text {
 		display: block;
 	  }
+	  /* モーダルの修正のため追記1229 */
+#gHeader .modalBox {
+	position: fixed;
+	top: 8%;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: transparent;
+	display: none;
+	z-index: 50;
+	cursor: pointer;
+	}
+
+	/* 1230 モーダル修正のため追記 */
+	#gHeader .modalBox.active {
+		display: block;
+	}
 	
 }
 @media all and (max-width: 599px) {
@@ -826,6 +901,22 @@ height: 3.5rem;
 		box-shadow: none;
 		box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.04);
 	}
+	#gHeader .modalBox {
+		position: fixed;
+		top: 10%;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background: transparent;
+		display: none;
+		z-index: 50;
+		cursor: pointer;
+		}
+
+		#gHeader .modalBox.bellOpenSp.is-active {
+		display: block;
+			}
+		
 	#gHeader .hBox {
 		margin: 0 auto;
 		display: block;
@@ -892,7 +983,7 @@ height: 3.5rem;
 	  }#gHeader .icon.bell .bellUsuallySp.is-active {
 		opacity: 0;
 	}
-	#gHeader .hUserBox-list .subList .hamburger-list a {
+	#gHeader .modalBox .subList .hamburger-list a {
 		height: 2.5rem;
 		}
 
@@ -1112,6 +1203,9 @@ height: 3.5rem;
 		max-width: 100%;
 		background: #FFF;
 		z-index: 200;
+		/* 一旦非表示 */
+		/* 1229　一旦削除 */
+		/* display: none; */
 	  }
 	  #gHeader .modal-content .moreLink {
 		display: none;
@@ -1133,6 +1227,7 @@ height: 3.5rem;
 		box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.04);
 		background: #FFF;
 	  }
+	  
 	  #gHeader .modal-content.notice  .notice-headlineBox::after {
 		content: '';
 		display: block;
@@ -1196,9 +1291,9 @@ height: 3.5rem;
 	z-index: 1;
 
 }
-	#gHeader .hUserBox-list .subList {
+	#gHeader .modalBox .subList {
 		position: absolute;
-		top: 100%;
+		top: 0%;
 		right: 0;
 		width: 100%;
 		height: 100vh;
@@ -1206,37 +1301,54 @@ height: 3.5rem;
 		border: none;
 		background: #F3F5F6;
 		border-radius: 0;
-		display:none;
+		animation-name:fade;
+		animation-duration:0.3s;
+		animation-fill-mode:forwards;
+		opacity: 0;
+
+		/* 1229　一旦削除 */
+		/* display:none; */
 
 	}
-	#gHeader .hUserBox-list .subList.active {
+		
+		@keyframes fade{
+		  from {
+			opacity: 0;
+		  }
+		
+		  to {
+			opacity: 1;
+		  }
+		}
+	/* #gHeader .modalBox .subList.active {
 		display: block;
-	}
-	#gHeader .hUserBox-list .subList li:not(:last-child) {
+	} */
+		/* 1229　一旦削除 */
+	/* #gHeader .modalBox .subList li:not(:last-child) {
 		border: none;
-	}
-	#gHeader .hUserBox-list .subList li:first-child {
+	} */
+	#gHeader .modalBox .subList li:first-child {
 		margin-top: 5%;
 	}
 
-	#gHeader .hUserBox-list .subList li{
+	#gHeader .modalBox .subList li{
 		background: #FFF;
 		padding: 0;
 		max-width: 86.33%;
 		border-radius: 1rem;
 		margin: 1.2rem auto;
 	}
-	#gHeader .hUserBox-list .subList li a {
+	#gHeader .modalBox .subList li a {
 		padding: 2.5rem 4.5rem;
 	}
-	#gHeader .hUserBox-list .subList li .responsive-arrow {
+	#gHeader .modalBox .subList li .responsive-arrow {
 		display: block;
 		margin-left: auto;
 	}
-	#gHeader .hUserBox-list .subList .hamburger-list .icon {
+	#gHeader .modalBox .subList .hamburger-list .icon {
 		margin-right: 4rem;
 	}
-	#gHeader .hUserBox-list .subList .hamburger-list .icon img {
+	#gHeader .modalBox .subList .hamburger-list .icon img {
 
 		width: 1.5rem;
 
@@ -1264,7 +1376,6 @@ height: 3.5rem;
 }
 @media all and (max-width: 599px) {
 	#gHeader .modal-content.notice .notice-container {
-
 		display: block;
 		min-height: calc(100vh - 1.2rem);
 	
@@ -1281,9 +1392,13 @@ height: 3.5rem;
 		max-width: 100%;
 		background: #FFF;
 		z-index: 200;
+		/* 一旦非表示 */
+		/* 1229　一旦削除 */
+		/* display: none; */
 	  }
 	  #gHeader .modal-content .moreLink {
-		display: none;
+		/* 1229 一旦削除 */
+		/* display: none; */
 	  }
 	  #gHeader .modal-content .headLine-notice {
 		background: #FFF;
@@ -1313,6 +1428,7 @@ height: 3.5rem;
 		flex: 1;
 		-webkit-tap-highlight-color:rgba(0,0,0,0);
 	  }
+	  
 	  #gHeader .modal-content.notice .notice-modal-close img {
 		margin-left: 0rem;
 		width: 3rem;
@@ -1324,9 +1440,9 @@ height: 3.5rem;
 		margin-bottom: 0rem;
 		font-size: 1.4rem;
 	}
-	#gHeader .hUserBox-list .subList {
+	#gHeader .modalBox .subList {
 		position: absolute;
-		top: 100%;
+		top: 0%;
 		right: 0;
 		width: 100%;
 		height: 100vh;
@@ -1334,42 +1450,45 @@ height: 3.5rem;
 		border: none;
 		background: #F3F5F6;
 		border-radius: 0;
-		display:none;
+		/* 1229 一旦削除 */
+		/* display:none; */
 
 	}
-	#gHeader .hUserBox-list .subList.active {
+		/* 1229 一旦削除 */
+	/* #gHeader .modalBox .subList.active {
 		display: block;
-	}
+	} */
 	#gHeader .hUserBoxOuter {
 		z-index: 1;
 	}
-	#gHeader .hUserBox-list .subList.active {
+		/* 1229 一旦削除 */
+	/* #gHeader .modalBox .subList.active {
 		display: block;
-	}
-	#gHeader .hUserBox-list .subList li:not(:last-child) {
+	} */
+	#gHeader .modalBox .subList li:not(:last-child) {
 		border: none;
 	}
-	#gHeader .hUserBox-list .subList li:first-child {
+	#gHeader .modalBox .subList li:first-child {
 		margin-top: 5%;
 	}
 
-	#gHeader .hUserBox-list .subList li{
+	#gHeader .modalBox .subList li{
 		background: #FFF;
 		padding: 0;
 		max-width: 86.33%;
 		border-radius: 1rem;
 		margin: 1.2rem auto;
 	}
-	#gHeader .hUserBox-list .subList li a {
+	#gHeader .modalBox .subList li a {
 		padding: 2.5rem 3rem;
 		column-gap: 1.3rem;
 	}
 
-	#gHeader .hUserBox-list .subList li .responsive-arrow {
+	#gHeader .modalBox .subList li .responsive-arrow {
 		display: block;
 		margin-left: auto;
 	}
-	#gHeader .hUserBox-list .subList li a .icon  {
+	#gHeader .modalBox .subList li a .icon  {
 		margin-right: 3rem;
 	}
 	#gHeader .User-detail.hUserBox .userImg {
@@ -1380,7 +1499,7 @@ height: 3.5rem;
 	#gHeader .User-detail.hUserBox .User-detail-box {
 		flex: 10;
 	}
-	#gHeader .hUserBox-list .subList li .responsive-arrow {
+	#gHeader .modalBox .subList li .responsive-arrow {
 		flex: 1;
 		text-align: right;
 	}
