--- a/css/student.css
+++ b/css/student.css
@@ -1014,6 +1014,7 @@ justify-content: flex-end;
 		padding: 0.6rem 1.6rem 0.6rem 2rem;
 		align-items: center;
 		justify-content: center;
+		border-radius: .5rem;
 	}
 	#main .message.profile {
 		padding: 2.2rem 2.5rem 3.2rem;
