--- a/css/common/general.css
+++ b/css/common/general.css
@@ -4185,8 +4185,7 @@ li .uploadResult a {
 	padding: 2rem 2.3rem;
 	border-radius: 2.7rem;
 	position: relative;
-	background:#FFF;
-	border: 0.1rem solid #A3A3A3;
+	background:#F3F5F6;
 }
 .comMessageBox .companymessage .itemBox .detailBox .subBox {
 	padding: 2rem 2.3rem;
@@ -4257,11 +4256,11 @@ li .uploadResult a {
 	font-size: 1.4rem;
 }
 .comMessageBox .detailBox .subBox::before {
-	width: 2rem;
-	height: 2rem;
+	width: 2.7rem;
+	height: 2.7rem;
 	position: absolute;
 	left: auto;
-	right: -1.35rem;
+	right: -2.2rem;
 	top: 2rem;
 	background: url("/image/common/message-bubbleBg-white.png") no-repeat left center / auto 100%;
 	content: "";
@@ -4418,12 +4417,12 @@ li .uploadResult a {
 		content: "";
 	}
 	.comMessageBox .detailBox .subBox::before {
-		width: 1.5rem;
-		height: 1.5rem;
+		width: 1.7rem;
+		height: 1.7rem;
 		position: absolute;
 		left: auto;
-		right: -.95rem;
-		top: 1.7rem;
+		right: -1.5rem;
+		top: 2rem;
 		background: url("/image/common/message-bubbleBg-white.png") no-repeat left center / auto 100%;
 		content: "";
 	}
@@ -5413,6 +5412,10 @@ margin-top: -2.3rem;
 		height: 4rem;
 		border-radius: 0.5rem;
     	font-size: 1rem;
+	}
+	.modal-editor .editor-container .fileUpload {
+		padding-top: 1rem;
+		margin-right: 1rem;
 	}
 	.modal-editor .editor-container .fileUpload label input[type="file"] ~ span {
 		margin-right: 1rem;
